--- a/new/mobile/.eslintrc.json
+++ b/new/mobile/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "env": {
-    "es2021": true
+    "es6": true
   },
   "extends": [
     "plugin:react/recommended",
@@ -10,6 +10,8 @@
     "plugin:prettier/recommended"
   ],
   "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly",
     "__DEV__": "readonly"
   },
   "parser": "@typescript-eslint/parser",
@@ -17,10 +19,10 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
+  "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
